Fix overflowing thumbnails

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -510,7 +510,7 @@ html {
   height: 180px; // Fixed image area height
 
   .aspect-video {
-    height: 100%;
+    max-height: 100%;
     aspect-ratio: 16/9;
   }
 }
